ruby-polkit1 - updated CHANGELOG.rdoc and README.rdoc

--- a/ruby-polkit1/CHANGELOG.rdoc
+++ b/ruby-polkit1/CHANGELOG.rdoc
@@ -1,4 +1,9 @@
+=0.1.0
 
-=0.1
+* Support polkit >= 0.107 (Javascript rules files)
+* PolKit1::polkit1_write - changed method signature
+
+=0.0.1
 
 * Initial release
+
